--- a/kimball.html
+++ b/kimball.html
@@ -294,7 +294,22 @@
         Search ignores case and spaces. If a Kimball PN isn’t found, double-check that it’s in the 2016 crossover list.
       </p>
     </div>
-
+<div style="margin-top: 14px; text-align: center;">
+  <a href="index.html"
+     style="
+       display: inline-block;
+       padding: 10px 16px;
+       background: #e5e7eb;
+       color: #1f2937;
+       border-radius: 10px;
+       text-decoration: none;
+       font-size: 14px;
+       font-weight: 600;
+       border: 1px solid #d1d5db;
+     ">
+    ← Back to Tool Menu
+  </a>
+</div>
     <footer>
       Created by Alex Washburn — © 2025
     </footer>
