--- a/wurth.html
+++ b/wurth.html
@@ -144,6 +144,22 @@
       <div id="result"></div>
       <p class="hint">You can type the number with or without hyphens/spaces. The lookup ignores them.</p>
     </div>
+    <div style="margin-top: 14px; text-align: center;">
+  <a href="index.html"
+     style="
+       display: inline-block;
+       padding: 10px 16px;
+       background: #e5e7eb;
+       color: #1f2937;
+       border-radius: 10px;
+       text-decoration: none;
+       font-size: 14px;
+       font-weight: 600;
+       border: 1px solid #d1d5db;
+     ">
+    ← Back to Tool Menu
+  </a>
+</div>
     <footer>Created by Alex Washburn — © 2025</footer>
   </div>
   <script>
