--- a/index.html
+++ b/index.html
@@ -194,6 +194,26 @@
 
       </section>
     </div>
+    <div style="margin-top: 20px; text-align: center;">
+  <p style="font-size: 14px; color: #555;">
+    If you find this helpful, consider buying me a cup of coffee:
+  </p>
+  <a href="https://www.paypal.com/paypalme/awashbu12"
+     target="_blank"
+     style="
+       display: inline-block;
+       margin-top: 6px;
+       padding: 10px 18px;
+       background: #ffd600;
+       color: #222;
+       border-radius: 8px;
+       text-decoration: none;
+       font-weight: 600;
+       border: 1px solid #e0c200;
+     ">
+    ☕ Buy Me a Coffee
+  </a>
+</div>
 
     <footer>
       Created by Alex Washburn — © 2025
