--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <div class="tool-title">Kimball → Tifco</div>
           <div class="tool-desc">Search Kimball Midwest part numbers and view the Tifco match instantly.</div>
           <div class="tool-link">
-            <a href="kimball.html">
+            <a href="kimball.html?v=2">
               <span class="icon">↗</span> Open Kimball Tool
             </a>
           </div>
@@ -198,7 +198,7 @@
           <div class="tool-title">Lawson → Tifco</div>
           <div class="tool-desc">Enter Lawson product numbers to get the matching Tifco part.</div>
           <div class="tool-link">
-            <a href="lawson.html">
+            <a href="lawson.html?v=2">
               <span class="icon">↗</span> Open Lawson Tool
             </a>
           </div>
@@ -208,7 +208,7 @@
           <div class="tool-title">Würth → Tifco</div>
           <div class="tool-desc">Convert Würth hardware numbers to Tifco part numbers.</div>
           <div class="tool-link">
-            <a href="wurth.html">
+            <a href="wurth.html?v=2">
               <span class="icon">↗</span> Open Würth Tool
             </a>
           </div>
@@ -218,7 +218,7 @@
           <div class="tool-title">Auveco → Tifco</div>
           <div class="tool-desc">Search any Auveco number and instantly find the Tifco equivalent.</div>
           <div class="tool-link">
-            <a href="auveco.html">
+            <a href="auveco.html?v=2">
               <span class="icon">↗</span> Open Auveco Tool
             </a>
           </div>
