--- a/index.html
+++ b/index.html
@@ -172,6 +172,14 @@
   }
 }
   </style>
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js')
+      .catch(function (err) {
+        console.error('SW registration failed', err);
+      });
+  }
+</script>
 </head>
 
 <body>
