--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <div class="tool-title">Lawson → Tifco</div>
           <div class="tool-desc">Enter Lawson product numbers to get the matching Tifco part.</div>
           <div class="tool-link">
-            <a href="lawson.html?v=6">
+            <a href="lawson.html?v=7">
               <span class="icon">↗</span> Open Lawson Tool
             </a>
           </div>
@@ -216,7 +216,7 @@
           <div class="tool-title">Würth → Tifco</div>
           <div class="tool-desc">Convert Würth hardware numbers to Tifco part numbers.</div>
           <div class="tool-link">
-            <a href="wurth.html?v=6">
+            <a href="wurth.html?v7">
               <span class="icon">↗</span> Open Würth Tool
             </a>
           </div>
@@ -226,7 +226,7 @@
           <div class="tool-title">Auveco → Tifco</div>
           <div class="tool-desc">Search any Auveco number and instantly find the Tifco equivalent.</div>
           <div class="tool-link">
-            <a href="auveco.html?v=6">
+            <a href="auveco.html?v=7">
               <span class="icon">↗</span> Open Auveco Tool
             </a>
           </div>
