--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   }
 }
     #reportBtn {
-  background: var(--brand-blue);
+  background: var(--brand-blue-dark);
   color: #f0f0f0;
   padding: 10px 16px;
   border: none;
