--- a/wurth.html
+++ b/wurth.html
@@ -351,7 +351,7 @@
       <p style="font-size: 14px; color: #555;">
         If you find this helpful, consider buying me a cup of coffee:
       </p>
-      <a href="https://www.paypal.com/paypalme/awashbu12"
+      <a href="https://www.paypal.com/paypalme/awashbu12/5"
          target="_blank"
          style="
            display: inline-block;
