--- a/wurth.html
+++ b/wurth.html
@@ -161,6 +161,44 @@
         color: #6b7280;
       }
     }
+    /* Centered toast overlay */
+.toast {
+  position: fixed;
+  inset: 0; /* top:0; right:0; bottom:0; left:0 */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+  z-index: 9999;
+  opacity: 0;
+  transition: opacity 0.25s ease;
+}
+
+.toast-inner {
+  background: #0ea5e9;
+  color: white;
+  padding: 12px 24px;
+  border-radius: 12px;
+  font-size: 16px;
+  box-shadow: 0 10px 25px rgba(15,23,42,0.4);
+}
+
+.toast.show {
+  opacity: 1;
+}
+    .copy-btn {
+  margin-left: 10px;
+  padding: 4px 10px;
+  font-size: 13px;
+  border: none;
+  border-radius: 6px;
+  background: #004c97;
+  color: white;
+  cursor: pointer;
+}
+.copy-btn:active {
+  opacity: 0.8;
+}
 
   </style>
 </head>
@@ -259,7 +297,10 @@
 
       const tifco = mapping[key];
       if (tifco) {
-        setResult('<strong>Tifco part:</strong> ' + tifco);
+        setResult(
+  '<strong>Tifco part:</strong> ' + tifco +
+  ' <button class="copy-btn" onclick="copyTifco(\'' + tifco + '\')">Copy</button>'
+);
       } else {
         setResult('<strong>No match found</strong> for <code>' + raw.replace(/</g,'&lt;') + '</code>');
       }
@@ -285,6 +326,21 @@
         if (e.key === 'Enter') lookup();
       });
     });
+    function copyTifco(value) {
+  navigator.clipboard.writeText(value)
+    .then(() => {
+      const t = document.getElementById('toast');
+      if (!t) return;
+      t.classList.add('show');
+      setTimeout(() => t.classList.remove('show'), 1500);
+    })
+    .catch(() => {
+      alert('Copied: ' + value); // fallback if clipboard fails
+    });
+}
   </script>
+  <div id="toast" class="toast">
+  <div class="toast-inner">Copied!</div>
+</div>
 </body>
 </html>
