--- a/kimball.html
+++ b/kimball.html
@@ -8,6 +8,19 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Kimball ↔ Tifco" />
   <style>
+    .copy-btn {
+  margin-left: 10px;
+  padding: 4px 10px;
+  font-size: 13px;
+  border: none;
+  border-radius: 6px;
+  background: #004c97;
+  color: white;
+  cursor: pointer;
+}
+.copy-btn:active {
+  opacity: 0.8;
+}
 
     :root {
       --brand-blue: #004c97;
